Fix jvm opts flag